--- a/_includes/photos.html
+++ b/_includes/photos.html
@@ -59,6 +59,7 @@
     <a data-lightbox="photos" href="/particle_site/assets/img/File%2037.jpg"><img src="/particle_site/assets/img/File%2037.jpg" alt="Photo 37"></a>
     <a data-lightbox="photos" href="/particle_site/assets/img/File%2038.jpg"><img src="/particle_site/assets/img/File%2038.jpg" alt="Photo 38"></a>
     <a data-lightbox="photos" href="/particle_site/assets/img/File%2039.jpg"><img src="/particle_site/assets/img/File%2039.jpg" alt="Photo 39"></a>
+    <a data-lightbox="photos" href="/particle_site/assets/img/File%2040.jpg"><img src="/particle_site/assets/img/File%2040.jpg" alt="Photo 40"></a>
   </div>
 </div>
 
