--- a/_includes/photos.html
+++ b/_includes/photos.html
@@ -65,7 +65,7 @@
 
 <style>
 .photo-gallery {
-  padding: 10px;
+  padding: 20px;
   background-color: #ffffff;
 }
 
@@ -81,6 +81,10 @@
   height: 100%;
   object-fit: cover;
   border-radius: 4px;
+}
+
+.photo-grid a:last-child {
+  margin-bottom: 0;
 }
 
 /* Medium devices (tablets) */
