--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
 <div class="about-intro">
   <div class="headshot">
-    <img src="/particle_site/assets/img/headshot.png" alt="Headshot">
+    <img src="/particle_site/assets/img/headshot.jpg" alt="Headshot">
   </div>
 
   <div class="user-details">
