--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
       
       <!-- Headshot column -->
       <div class="col-md-6 text-center">
-        <img src="/particle_site/assets/img/headshot.png" alt="Headshot" 
+        <img src="/particle_site/assets/img/headshot.jpg" alt="Headshot" 
              class="img-fluid" 
              style="height: auto; max-width: 80%; margin-bottom: 20px;">
       </div>
