--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,8 +1,8 @@
 <div class="user-details">
-  <h1> Featured Projects </h1>
+  <h1> Featured Projects - Coming Soon! </h1>
 </div>
 
-
+<!--
 <div class="user-projects">
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
 
@@ -174,5 +174,5 @@
       </p>
     </div>
   </div>
-
+-->
 </div>
