--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-<div style="background-color: #FFFFFF; padding: 20px; max-width: 1000px; margin: auto; font-size: 16px; line-height: 1.25; overflow: hidden;">
+<div style="background-color: #FFFFFF; padding: 20px; max-width: 1000px; margin: auto; font-size: 16px; line-height: 1.5; overflow: hidden;">
   
   <img src="/particle_site/assets/img/headshot.jpg" alt="Headshot"
        style="float: left; width: 100%; max-width: 450px; height: auto; margin-right: 20px; margin-bottom: 20px; border-radius: 8px;">
@@ -12,7 +12,7 @@
     <strong>Since biological and chemical reactions were run directly on SPOTs itself and it was designed to be broadly applicable across science, I had to develop ways to process and analyze the thousands of experiments we were quickly generating. This often came in the form of images, where I would look for information such as living cells being killed by drugs, or color changes when I modified a chemical compound.</strong><br><br>
     <strong>I used SPOTs for over 20 different projects and developed numerous Python-based pipelines to process the data and analyze the results (this is what helped me learn that I love data science!). After I extracted image data, I would leverage different statistical, ML, and AI techniques to give insight into the new discoveries we made or to suggest the next experiments to run to build stronger models.</strong><br><br>
     <strong>SPOTs was a technology that I spun out during my PhD, and I spent a large portion of my time pursuing. I focused on the business aspects of learning how we fit in the market and scaling the product to be cost-effective and manufactured on a large scale (of over 3000 tools per month!). I also worked with leading research labs around the country at Stanford, Weill Cornell Medicine, and Harvard to learn what aspects they liked and (potentially more importantly) didn’t like about the product to build it into a user-friendly, functional device.</strong><br><br>
-    <strong>Upon graduating, I chose not to continue with the company due to challenges with the market. Through this work, I fell in love with developing complex Python data analysis pipelines and managing projects our incredible collaborators were working on.</strong><br><br>
+    <strong>I have since chosen not to continue with the company due to challenges with the market. Through this work, I fell in love with developing complex Python data analysis pipelines and managing projects our incredible collaborators were working on.</strong><br><br>
     <strong>I am currently pursuing industry roles in data science, project management, and broader roles across life sciences and medicine where I can continue to solve difficult problems!</strong>
   </p>
 
@@ -35,19 +35,16 @@
   </div>
 
   <div class="tech">
-    <h2>Developing</h2>
+    <h2>Programming & Software</h2>
   <div class="icons">
       <i class="devicon-python-plain"></i>
       <i class="devicon-git-plain"></i>
       <i class="devicon-docker-plain"></i>
     </div>
     <p>
-      I'm strongly convinced that machine learning models should not go to waste in Jupyter Notebooks.
-      Using my software engineering skills, I've built and deployed AI services which create real business value.
-    </p>
-  </div>
-  <div class="tech">
-    <h2>Communicating</h2>
+      I have used many tools to extract, clean, analyze, and visualize large datasets. 
+      My experiences during my PhD taught me how to know what questions to ask, and when to ask them so adding new tools to my toolset and becoming comfortable with those comes easily for me.
+      A running list of the current tech stack that I work with includes: Python (numpy, pandas, scipy, matplotlib, seaborn, scikit-learn, umap, Jupyter notebooks), R, SQL, MATLAB, Power BI, Docker, Bash/Zsh, GitHub, and LaTeX.
   <div class="icons">
       <i class="icon fas fa-chalkboard-teacher"></i>
       <i class="icon fas fa-pencil-alt"></i>
