--- a/_includes/about.html
+++ b/_includes/about.html
@@ -22,15 +22,17 @@
 
 <div class="user">
   <div class="tech">
-    <h2>Analyzing </h2>
+    <h2>Analysis </h2>
   <div class="icons">
       <i class="icon fas fa-file-csv"></i>
       <i class="icon fas fa-microscope"></i>
       <i class="icon fas fa-chart-bar"></i>
     </div>
     <p>
-      In a wide range of subject areas, I have analyzed structured and unstructured data to extract actionable business insights.
-      I love to craft stunning and clever visualizations that illustrate surprising results.
+      My work has focused on analyzing structured and unstructured data to extract actionable results and business insights.
+      I love to craft clever visualizations to illustrate results in a way that helps us see around obvious findings and discover unique ones.
+      I've recently really enjoyed incorporating machine learning and AI into my work to see if we can improve on the high-quality discoveries we find.
+      However, I do believe that these tools aren't necessary in every use case, so I'm a big proponent of using them strategically and not just for the sake of using them.
     </p>
   </div>
 
@@ -43,7 +45,7 @@
     </div>
     <p>
       I have used many tools to extract, clean, analyze, and visualize large datasets. 
-      My experiences during my PhD taught me how to know what questions to ask, and when to ask them so adding new tools to my toolset and becoming comfortable with those comes easily for me.
+      My work during my PhD taught me how to know what questions to ask, and when to ask them. This has made learning new tools a fun challenge for me because I have the opportunity to learn as I go to solve challenging problems.
       A running list of the current tech stack that I work with includes: Python (numpy, pandas, scipy, matplotlib, seaborn, scikit-learn, umap, Jupyter notebooks), R, SQL, MATLAB, Power BI, Docker, Bash/Zsh, GitHub, and LaTeX.
   <div class="icons">
       <i class="icon fas fa-chalkboard-teacher"></i>
