--- a/_includes/about.html
+++ b/_includes/about.html
@@ -47,14 +47,18 @@
       I have used many tools to extract, clean, analyze, and visualize large datasets. 
       My work during my PhD taught me how to know what questions to ask, and when to ask them. This has made learning new tools a fun challenge for me because I have the opportunity to learn as I go to solve challenging problems.
       A running list of the current tech stack that I work with includes: Python (numpy, pandas, scipy, matplotlib, seaborn, scikit-learn, umap, Jupyter notebooks), R, SQL, MATLAB, Power BI, Docker, Bash/Zsh, GitHub, and LaTeX.
-  <div class="icons">
+  <div class="tech">
+    <h2>Science Communication</h2>
+    <div class="icons">
       <i class="icon fas fa-chalkboard-teacher"></i>
       <i class="icon fas fa-pencil-alt"></i>
       <i class="icon fas fa-comments"></i>
     </div>
     <p>
-      I enjoy public speaking, writing professional articles, sharing my knowledge and discussing diverse topics.
-      Thanks to my training and experience in science communication, I'm able to present complex results to a non-technical audience.
+      My experiences delivering talks at international scientific conferences and pitching those same ideas to entrepreneurs and investors has helped me hone my skills in science communcation.
+      I find it really fun to discuss complex science with non-experts, as it's super rewarding for me to be able to have conversations about life-changing scientific discoveries with people that rarely are given the opportunity to engage in those conversations.
+      I have received great ideas through these discussions, and find them highly important for driving science forward.
+      These experiences have helped me develop the skills to confidently present complex results to non-technical audiences.
     </p>
   </div>
 </div>
