--- a/_includes/about.html
+++ b/_includes/about.html
@@ -37,7 +37,7 @@
   </div>
 
   <div class="tech">
-    <h2>Programming & Software</h2>
+    <h2>Programming & <br>Software</h2>
   <div class="icons">
       <i class="devicon-python-plain"></i>
       <i class="devicon-git-plain"></i>
@@ -48,7 +48,7 @@
       My work during my PhD taught me how to know what questions to ask, and when to ask them. This has made learning new tools a fun challenge for me because I have the opportunity to learn as I go to solve challenging problems.
       A running list of the current tech stack that I work with includes: Python (numpy, pandas, scipy, matplotlib, seaborn, scikit-learn, umap, Jupyter notebooks), R, SQL, MATLAB, Power BI, Docker, Bash/Zsh, GitHub, and LaTeX.
   <div class="tech">
-    <h2>Science Communication</h2>
+    <h2>Science <br> Communication</h2>
     <div class="icons">
       <i class="icon fas fa-chalkboard-teacher"></i>
       <i class="icon fas fa-pencil-alt"></i>
