--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,10 +20,11 @@
 
 
 
-<div class="user">
-  <div class="tech">
+<div class="user" style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: space-between;">
+
+  <div class="tech" style="flex: 1 1 30%; min-width: 250px;">
     <h2>Analysis </h2>
-  <div class="icons">
+    <div class="icons">
       <i class="icon fas fa-file-csv"></i>
       <i class="icon fas fa-microscope"></i>
       <i class="icon fas fa-chart-bar"></i>
@@ -36,9 +37,9 @@
     </p>
   </div>
 
-  <div class="tech">
-    <h2>Programming & <br>Software</h2>
-  <div class="icons">
+  <div class="tech" style="flex: 1 1 30%; min-width: 250px;">
+    <h2>Programming & Software</h2>
+    <div class="icons">
       <i class="devicon-python-plain"></i>
       <i class="devicon-git-plain"></i>
       <i class="devicon-docker-plain"></i>
@@ -47,8 +48,11 @@
       I have used many tools to extract, clean, analyze, and visualize large datasets. 
       My work during my PhD taught me how to know what questions to ask, and when to ask them. This has made learning new tools a fun challenge for me because I have the opportunity to learn as I go to solve challenging problems.
       A running list of the current tech stack that I work with includes: Python (numpy, pandas, scipy, matplotlib, seaborn, scikit-learn, umap, Jupyter notebooks), R, SQL, MATLAB, Power BI, Docker, Bash/Zsh, GitHub, and LaTeX.
-  <div class="tech">
-    <h2>Science <br> Communication</h2>
+    </p>
+  </div>
+
+  <div class="tech" style="flex: 1 1 30%; min-width: 250px;">
+    <h2>Science Communication</h2>
     <div class="icons">
       <i class="icon fas fa-chalkboard-teacher"></i>
       <i class="icon fas fa-pencil-alt"></i>
@@ -61,4 +65,5 @@
       These experiences have helped me develop the skills to confidently present complex results to non-technical audiences.
     </p>
   </div>
+
 </div>
