--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,7 @@
 
   <p>
     <strong>Hello!</strong><br><br>
-    <strong>Thank you for stopping by! I’m currently working on revamping my website. I plan to build out sections describing specific projects and workflows that I used to achieve those results.</strong><br><br>
+    <strong>Thanks for stopping by! I’m currently working on revamping my website. I plan to build out sections describing specific projects and workflows that I used to achieve those results.</strong><br><br>
     <strong>In the meantime, a little background on me:</strong><br><br>
     <strong>I love to solve difficult problems. I earned my PhD in biomedical engineering in August 2025 by developing a physical tool, called SPOTs, to help scientists and researchers be more effective and efficient in solving complex problems.</strong><br><br>
     <strong>SPOTs was built for bench scientists to test anywhere from 100 to over 100,000 reactions to discover new drug combinations, create new drug molecules, and streamline clinical assays, all for 10,000X less cost than available methods.</strong><br><br>
@@ -38,7 +38,7 @@
   </div>
 
   <div class="tech" style="flex: 1 1 30%; min-width: 250px;">
-    <h2>Programming & Software</h2>
+    <h2>Programming & <br> Software</h2>
     <div class="icons">
       <i class="devicon-python-plain"></i>
       <i class="devicon-git-plain"></i>
@@ -52,7 +52,7 @@
   </div>
 
   <div class="tech" style="flex: 1 1 30%; min-width: 250px;">
-    <h2>Science Communication</h2>
+    <h2>Science <br> Communication</h2>
     <div class="icons">
       <i class="icon fas fa-chalkboard-teacher"></i>
       <i class="icon fas fa-pencil-alt"></i>
