--- a/_includes/about.html
+++ b/_includes/about.html
@@ -22,7 +22,7 @@
 
 <div class="user" style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: space-between;">
 
-  <div class="tech" style="flex: 1 1 30%; min-width: 250px;">
+  <div class="tech" style="width: 32%;">
     <h2>Analysis </h2>
     <div class="icons">
       <i class="icon fas fa-file-csv"></i>
@@ -37,7 +37,7 @@
     </p>
   </div>
 
-  <div class="tech" style="flex: 1 1 30%; min-width: 250px;">
+  <div class="tech" style="width: 32%;">
     <h2>Programming & <br> Software</h2>
     <div class="icons">
       <i class="devicon-python-plain"></i>
@@ -51,7 +51,7 @@
     </p>
   </div>
 
-  <div class="tech" style="flex: 1 1 30%; min-width: 250px;">
+  <div class="tech" style="width: 32%;">
     <h2>Science <br> Communication</h2>
     <div class="icons">
       <i class="icon fas fa-chalkboard-teacher"></i>
