--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,12 +1,12 @@
-<div style="background-color: #FFFFFF; padding: 10px; max-width: 1000px; margin: auto; font-size: 15px; line-height: 1.5; overflow: hidden;">
+<div style="background-color: #FFFFFF; padding: 10px; max-width: 1000px; margin: auto; font-size: 16px; line-height: 1.5; overflow: hidden;">
   
   <img src="/particle_site/assets/img/headshot.jpg" alt="Headshot"
-       style="float: left; width: 100%; max-width: 450px; height: auto; margin-right: 20px; margin-bottom: 10px; border-radius: 8px;">
+       style="float: left; width: 100%; max-width: 500px; height: auto; margin-right: 20px; margin-bottom: 10px; border-radius: 8px;">
 
   <p>
-    <strong>Hello!</strong><br><br style="line-height: 0.5;" />
-    <strong>Thanks for stopping by! I’m currently working on revamping my website. I plan to build out sections describing specific projects and workflows that I used to achieve those results.</strong><br><br style="line-height: 0.5;" />
-    <strong>In the meantime, a little background on me:</strong><br><br style="line-height: 0.5;" />
+    <strong>Hello!</strong><br><br>
+    <strong>Thanks for stopping by! I’m currently working on revamping my website. I plan to build out sections describing specific projects and workflows that I used to achieve those results.</strong><br><br>
+    <strong>In the meantime, a little background on me:</strong><br><br>
     <strong>I love to solve difficult problems. I earned my PhD in biomedical engineering in August 2025 by developing a physical tool, called SPOTs, to help scientists and researchers be more effective and efficient in solving complex problems.</strong><br><br>
     <strong>SPOTs was built for bench scientists to test anywhere from 100 to over 100,000 reactions to discover new drug combinations, create new drug molecules, and streamline clinical assays, all for 10,000X less cost than available methods.</strong><br><br>
     <strong>Since biological and chemical reactions were run directly on SPOTs itself and it was designed to be broadly applicable across science, I had to develop ways to process and analyze the thousands of experiments we were quickly generating. This often came in the form of images, where I would look for information such as living cells being killed by drugs, or color changes when I modified a chemical compound.</strong><br><br>
