--- a/_includes/about.html
+++ b/_includes/about.html
@@ -38,7 +38,7 @@
   </div>
 
   <div class="tech" style="width: 32%;">
-    <h2>Programming & Software</h2>
+    <h2>Programming</h2>
     <div class="icons">
       <i class="devicon-python-plain"></i>
       <i class="devicon-git-plain"></i>
@@ -52,7 +52,7 @@
   </div>
 
   <div class="tech" style="width: 32%;">
-    <h2>Science Communication</h2>
+    <h2>Communication</h2>
     <div class="icons">
       <i class="icon fas fa-chalkboard-teacher"></i>
       <i class="icon fas fa-pencil-alt"></i>
