--- a/_includes/about.html
+++ b/_includes/about.html
@@ -23,7 +23,7 @@
 <div class="user" style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: space-between;">
 
   <div class="tech" style="width: 30%;">
-    <h2>Analysis</h2>
+    <h2>Data Analysis</h2>
     <div class="icons">
       <i class="icon fas fa-file-csv"></i>
       <i class="icon fas fa-microscope"></i>
@@ -38,7 +38,7 @@
   </div>
 
   <div class="tech" style="width: 30%;">
-    <h2>Programming</h2>
+    <h2>Programming & Software</h2>
     <div class="icons">
       <i class="devicon-python-plain"></i>
       <i class="devicon-git-plain"></i>
@@ -52,7 +52,7 @@
   </div>
 
   <div class="tech" style="width: 30%;">
-    <h2>Communication</h2>
+    <h2>Science Communication</h2>
     <div class="icons">
       <i class="icon fas fa-chalkboard-teacher"></i>
       <i class="icon fas fa-pencil-alt"></i>
