--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
        style="float: left; width: 100%; max-width: 500px; height: auto; margin-right: 20px; margin-bottom: 10px; border-radius: 8px;">
 
   <p>
-    <strong>Helloo!</strong><br><div style="height: 0.5em;"></div>
+    <strong>Hello!</strong><br><div style="height: 0.5em;"></div>
     <strong>Thanks for stopping by! I’m currently working on revamping my website. I plan to build out sections describing specific projects and workflows that I used to achieve those results.</strong><br><div style="height: 0.75em;"></div>
     <strong>In the meantime, a little background on me:</strong><br><div style="height: 0.75em;"></div>
     <strong>I love to solve difficult problems. I earned my PhD in biomedical engineering in August 2025 by developing a physical tool, called SPOTs, to help scientists and researchers be more effective and efficient in solving complex problems.</strong><br><div style="height: 0.75em;"></div>
