--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,19 +12,19 @@
         <a rel="me" aria-label="LinkedIn" target="_blank" href="https://www.linkedin.com/in/jonalbo"><i class="icon fab fa-linkedin" aria-hidden="true"></i></a>
         </div>
       <div class="header-links">
-        <a class="link" href="/particle_site/#about">About</a>
+        <a class="link" href="/#about">About</a>
         ·
-        <a class="link" href="/particle_site/#projects">Projects</a>
+        <a class="link" href="/#projects">Projects</a>
         ·
-        <a class="link" href="https://www.jonalbo.com/JonAlbo_Resume.pdf">Resume</a>
+        <a class="link" href="/Jon_Albo_Resume_DS.pdf">Resume</a>
         ·
         <a class="link" href="https://patents.google.com/?inventor=Jon+ALBO">Patents</a>
         ·
         <a class="link" href="https://scholar.google.com/citations?user=0ug4j68AAAAJ">Publications</a>
         ·
-        <a class="link" href="https://www.jonalbo.com/particle_site/photography">Photography</a>
+        <a class="link" href="/photography">Photography</a>
         ·
-        <a class="link" href="https://www.jonalbo.com/particle_site/news">In the News</a>
+        <a class="link" href="/news">In the News</a>
       </div>
   </div>
   <a class="down" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
