--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
 <div style="background-color: #FFFFFF; padding: 10px; max-width: 1000px; margin: auto; font-size: 16px; line-height: 1.5; overflow: hidden;">
   
-  <img src="/particle_site/assets/img/headshot.jpg" alt="Headshot"
+  <img src="/assets/img/headshot.jpg" alt="Headshot"
        style="float: left; width: 100%; max-width: 500px; height: auto; margin-right: 20px; margin-bottom: 10px; border-radius: 8px;">
 
   <p>
